--- a/changelog/upgrade-migration/deprecations.mdx
+++ b/changelog/upgrade-migration/deprecations.mdx
@@ -1,148 +1,124 @@
 ---
-title: "Deprecations and Sunset Schedules"
-description: "Lists deprecated features, APIs, and behaviors with relevant timelines and version targets for removal. Guidance is provided for alternative approaches, enabling proactive future-proofing."
+title: "Deprecations & Sunset Notices"
+description: "Lists features and APIs marked for deprecation or removal, with target timelines where available. Ensures users can proactively refactor code and avoid deprecated patterns."
 ---
 
-# Deprecations and Sunset Schedules
+# Deprecations & Sunset Notices
 
-The **Deprecations and Sunset Schedules** page provides essential information on deprecated features, APIs, and behaviors within Google Mock. Here, users will find clear timelines and version targets set for the removal of these elements. The page is designed to help developers proactively adapt their codebases by understanding what is deprecated, when support for these features will end, and how to transition to recommended alternatives.
+This page provides a clear listing of features and APIs within GoogleTest and GoogleMock that have been marked for deprecation or removal. It includes details about timelines and guidance to help you proactively refactor your test code to avoid reliance on deprecated patterns.
 
----
+## Understanding Deprecations
 
-## Understanding Deprecations and Sunset Schedules
+Deprecation is the process of marking features and APIs as obsolete, signaling that they will be removed in future releases. Deprecations offer a transition period allowing users to adapt their code before features are removed entirely, ensuring a smoother upgrade path and reducing unexpected breakages.
 
-Deprecations signal that certain features or APIs are discouraged from use and are planned for eventual removal. This advance notice allows developers to update or refactor their tests and mocks accordingly.
+## Why Should You Care?
 
-Sunset schedules outline the timeline for when deprecated functionalities will be removed from the product. Following these schedules is crucial for ensuring compatibility with future releases.
+Ignoring deprecations can lead to:
 
-### Why Is This Important?
+- Test failures when deprecated APIs are removed.
+- Increased maintenance effort to fix your test code later.
+- Missing out on improvements, bug fixes, and optimizations in newer APIs.
 
-Managing deprecations properly avoids last-minute surprises during upgrades, reduces technical debt, and ensures tests remain maintainable and aligned with evolving GoogleMock best practices.
+This page aims to help you keep your tests robust and future-proof by identifying deprecated elements early.
 
----
+## Current Deprecated Features and APIs
 
-## Types of Deprecations Covered
+### 1. Test and Test Suite Names with Underscores
 
-### Deprecated Macros and Methods
+Due to longstanding internal constraints and to improve compatibility with test filtering and reporting, underscores (`_`) in test suite and test names have been deprecated.
 
-- Certain macros (e.g., old-style `MOCK_METHODn` macros) are marked as deprecated in favor of the unified `MOCK_METHOD` macro with richer, clearer syntax.
+- **Impact**: Use of underscores in test suite or test names will trigger warnings.
+- **Migration**: Rename your tests and suites to remove underscores, replacing them with camel case or other separator styles.
 
-### Behavioral Changes
+See the [Breaking Changes & Migration Steps](./breaking-changes) guide for detailed examples.
 
-- Changes to default mock behaviors and warning levels for uninteresting calls (such as the introduction of strictness modes like `NiceMock`, `NaggyMock`, and `StrictMock`) are highlighted.
+### 2. Mock Method Declaration Requirements
 
-### Internal API Adjustments
+GoogleMock has refined how mock methods must be declared, especially regarding qualifiers.
 
-- Modifications to internal utilities or platform abstractions that might affect advanced mock customizations.
+- The exact declaration must precisely match the original method's signature, including qualifiers such as `const`, `noexcept`, and reference qualifiers.
+- Use of underspecified or incorrect qualifiers may lead to unexpected behaviors or compiler warnings.
 
----
+Refer to the [Mock Objects Basics](../api-reference/core-concepts/mock-objects-basics) page and the [Breaking Changes](./breaking-changes) for migration steps and best practices.
 
-## Timeline and Versioning
+### 3. Null Pointer Assertions
 
-Details on which versions mark the deprecation, the expected removal version, and any grace periods for migration are provided. Users are encouraged to plan migration efforts around these milestones.
+New standardized assertions for null pointer checks are preferred. Older patterns and custom macros for null pointer assertions are deprecated.
 
-For example:
+- Use `EXPECT_EQ(ptr, nullptr)` or `EXPECT_THAT(ptr, IsNull())` instead of legacy constructs.
 
-- The old `MOCK_CONST_METHODn` and related macros have been deprecated since 2018 (GoogleMock 1.x) and require migration to `MOCK_METHOD` forms.
-- Upcoming versions will begin removal of deprecated interfaces in favor of streamlined, modern mocking approaches.
+More details are available in the [Assertions Reference](../api-reference/core-concepts/test-assertions-overview).
 
----
+### 4. Legacy Legacy Macros and Actions
 
-## Migration Guidance and Alternatives
+Older macros such as `MOCK_METHODn` and `ACTION_Pn` are deprecated in favor of the generic `MOCK_METHOD` and lambda-based actions.
 
-To support developers through transition periods, this page offers:
+- Transition your mock classes to use `MOCK_METHOD` with its modern signature.
+- Replace older `ACTION` macros with lambda functions or functor objects, which provide clearer syntax and better type safety.
 
-- **Recommended Replacement Features:** Guidance on using the modern `MOCK_METHOD` macro to simplify mock definitions while fully supporting qualifiers like `const`, `override`, `noexcept`, and calltype specifications.
+For migration recipes, see the [gMock Cookbook](../docs/gmock_cook_book.md) and [Mocking Reference](../docs/reference/mocking.md).
 
-- **Code Examples:** Practical examples demonstrate migrating legacy mock classes to current style.
+### 5. Deprecated Mock Strictness Defaults
 
-- **Best Practices:** Tips on writing maintainable mocks and avoiding deprecated functionality, such as:
-  - Always placing `MOCK_METHOD` declarations in the `public:` section regardless of base class method access.
-  - Using typed aliases or parenthesized types to handle template arguments with commas.
-  - Leveraging strictness wrappers (`NiceMock`, `StrictMock`) appropriately to balance error-checking and test flexibility.
+Naggy mock is the default strictness level but may be deprecated in the future.
 
----
+- It is recommended to explicitly specify `NiceMock` or `StrictMock` wrappers.
+- This prepares your test code for upcoming changes in default behaviors.
 
-## Common Pitfalls and Troubleshooting
+See the [Strictness: Nice, Naggy, and Strict Mocks](../api-reference/mocking-and-behavior/strictness-nice-naggy) for best practices.
 
-This page also alerts users to common challenges and how to avoid them:
+## Tips for Managing Deprecations 
 
-- **Missing `override` or `const` Qualifiers:** Omitting these in mock method signatures leads to compilation errors or masked bugs.
+- **Monitor official release notes:** Stay updated on upcoming deprecations and removals.
+- **Use migration guides:** Refer to detailed migration steps in the [Breaking Changes & Migration Steps](./breaking-changes).
+- **Refactor early:** Update test names, mock method declarations, and expectation usage progressively.
+- **Leverage tools:** Use compiler warnings and GoogleTest flags to highlight deprecated usage.
 
-- **Unprotected Commas in Template Arguments:** Causing parsing failures unless properly parenthesized or aliased.
+## Sunset Timeline and Removal Plans
 
-- **Unexpected Behavior Changing with Strictness Modes:** Understanding the difference between uninteresting and unexpected calls prevents test brittleness.
+Where applicable, target timelines for removals are provided alongside the deprecated items. Users should aim to remove deprecated features from their test code prior to these timelines to avoid broken builds.
 
-- **Backward Compatibility Concerns:** Recommendations ensure that migrating away from deprecated elements does not break existing test suites abruptly.
+## Related Documentation and Resources
 
----
-
-## Proactive Future-proofing Strategies
-
-Users should:
-
-1. Regularly review this page during upgrades to stay aware of impending removals.
-2. Refactor mocks gradually to adopt the latest idiomatic usage.
-3. Employ provided migration patterns to minimize disruption.
-4. Leverage GoogleMock's built-in tools like `ON_CALL()` for default behaviors rather than heavy reliance on deprecated practices.
-
----
-
-## Additional Resources
-
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes and detailed examples for defining mocks and expectations.
-
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Core APIs and mock object management.
-
-- [Mock Strictness Best Practices](https://google.github.io/googletest/guides/mocking-scenarios/mock-strictness-best-practices.html): Guidance on balancing mock warnings and failures.
-
-- [Upgrade Breaking Changes & Required Actions](../upgrade-migration/breaking-changes): For critical modifications impacting upgrade paths.
-
-- [Changelog: Full Release Notes](../release-notes/detailed-changelog): For historical context and version-specific updates.
-
----
+- [Breaking Changes & Migration Steps](./breaking-changes)
+- [Mock Objects and Basic Mocking](../api-reference/core-concepts/mock-objects-basics)
+- [Assertions Reference](../api-reference/core-concepts/test-assertions-overview)
+- [Strictness: Nice, Naggy, and Strict Mocks](../api-reference/mocking-and-behavior/strictness-nice-naggy)
+- [gMock Cookbook](../docs/gmock_cook_book.md)
+- [Mocking Reference](../docs/reference/mocking.md)
 
 ## Summary
 
-This page is a critical checkpoint to help you avoid deprecated features and stay compatible with future GoogleMock versions. It empowers you to update legacy test mocks efficiently, utilize recommended modern approaches, and align with GoogleMock’s evolving standards for mock creation, management, and expectation setting.
+This page equips you with actionable knowledge about deprecated APIs in GoogleTest and GoogleMock. By proactively migrating away from deprecated features, you ensure that your testing suite remains robust, maintainable, and ready for future GoogleTest releases.
+
+<Tip>
+Automate migration as part of your regular development workflow to avoid technical debt related to deprecated APIs.
+</Tip>
+
+<Tip>
+Use `--gmock_verbose=info` to trace mock object behavior and identify deprecated or legacy usage.
+</Tip>
+
+-----
+
+# Changelog & Deprecations Integration
+
+This document is part of the GoogleTest changelog and upgrade documentation suite. For full context, consult the Recent Releases and Full Changelog pages within the Changelog section.
 
 ---
 
-## Example Migration Snippet: Legacy to Modern
+## Contact and Support
 
-```cpp
-// Legacy deprecated mock method macros (Deprecated)
-MOCK_CONST_METHOD1(SomeMethod, bool(int));
+For questions or to report issues related to deprecations, engage via GitHub issues at https://github.com/google/googletest or community forums like Stack Overflow.
 
-// Modern recommended usage
-MOCK_METHOD(bool, SomeMethod, (int), (const, override));
-```
+For official support channels, see the [Community Support FAQ](../../faq/advanced-issues-optimization-support/faq-community-support.mdx).
 
 ---
 
-## Pro Tip
+## Navigation
 
-Always place `MOCK_METHOD` declarations in the `public` section of mock classes, regardless of the original method's access level, to ensure seamless mocking and expectation setting.
-
----
-
-## Troubleshooting
-
-If your tests break after upgrading GoogleMock:
-
-- Check if you are still using old-style `MOCK_METHODn` macros; migrate to `MOCK_METHOD`.
-- Verify all mock methods correctly use `override` and `const` as needed.
-- Observe warnings or errors about uninteresting calls, and consider wrapping mocks in `NiceMock` or `StrictMock` to control strictness.
-- Consult the migration guides linked above.
+This page fits under **Changelog > Upgrade & Migration Guide** as a crucial reference for users planning test code upgrades.
 
 ---
 
-## Contact & Contribution
-
-For issues related to deprecated features or migration help,
-join the GoogleTest user community at [googletestframework@googlegroups.com](mailto:googletestframework@googlegroups.com), or contribute improvements via the GitHub repository.
-
-
----
-
-*This documentation is part of GoogleMock’s comprehensive user guidance to facilitate smooth transitions and maintain a high-quality testing ecosystem.*
+# End of Deprecations & Sunset Notices Documentation
