--- a/changelog/feature-fixes/new-features.mdx
+++ b/changelog/feature-fixes/new-features.mdx
@@ -1,97 +1,144 @@
 ---
-title: "Major New Features"
-description: "Spotlight articles on significant feature introductions—such as improved assertion mechanisms, enhanced mock support, or expanded test parameter options—in each release."
+title: "New Features & Improvements"
+description: "Covers newly introduced assertions, matchers, test runners, and portability improvements. Encourages users to leverage the latest capabilities for more robust testing."
 ---
 
-# Major New Features
+# New Features & Improvements
 
-Welcome to the spotlight on the major new features introduced in recent releases of GoogleTest and GoogleMock. This documentation highlights key advancements that enhance your testing and mocking experience, focusing on impactful improvements that empower you to write better, clearer, and more maintainable tests.
+This page highlights recent additions to GoogleMock, showcasing newly introduced assertions, matchers, test runners, and portability improvements. It aims to encourage you to leverage the latest capabilities for creating more robust and expressive tests.
 
 ---
 
-## Enhanced Assertion Mechanisms
+## 1. Expanded Assertions and Matchers
 
-One of the cornerstone improvements in recent releases is the expansion and refinement of GoogleTest's assertions. Users now benefit from:
+GoogleMock has extended its set of assertions and matchers to empower you with more precise and readable test specifications.
 
-- **Richer Assertions**: Assertions that provide more descriptive failure messages to pinpoint the exact issue.
-- **Improved Floating-Point Comparisons**: New macros and matchers for precise control when asserting floating-point equality or inequality, making tests more reliable across platforms.
-- **Better Integration with Matchers**: Assertions can seamlessly incorporate matchers for expressive, flexible validations.
+- **New Multi-Argument Matchers**: You can now assert conditions involving multiple arguments at once. For instance, the `.With()` clause on `EXPECT_CALL` and `ON_CALL` lets you match all arguments combined as a tuple, enabling concepts like "the first argument is less than the second" using built-in utilities such as `Lt()`.
 
-Example:
+- **Custom Matcher Enhancements**: With new macro facilities like `MATCHER`, `MATCHER_P`, and polymorphic matcher implementations, defining custom matchers can be concise while providing rich, descriptive failure messages.
 
-```cpp
-EXPECT_THAT(value, ::testing::AllOf(::testing::Gt(5), ::testing::Lt(10)));
-```
+- **Improved Container and Pointer Matchers**: Matchers like `ElementsAre()`, `UnorderedElementsAre()`, and `Pointee()` make it easier to verify container contents and pointer target values, supporting even nested containers.
 
-This assertion verifies that `value` is greater than 5 and less than 10 with a clear, readable syntax.
+Apply these enhanced matchers to express your intent precisely, reducing brittle tests caused by over- or under-specification.
 
-## Advanced Mock Support
+## 2. Advanced Mocking Features and Test Runners
 
-Recent versions have significantly strengthened GoogleMock’s ability to create and manage mock objects with new capabilities:
+Recent updates improve your control over mock behavior and test interactions, making tests clearer and less error-prone.
 
-- **Better Support for Move-Only Types**: You can now mock methods that take or return move-only types like `std::unique_ptr` naturally, enabling modern C++ usage patterns.
+- **`MOCK_METHOD` Macro Refinements**: Handling of return types and method qualifiers (`const`, `override`, `noexcept`, and call types) has been streamlined. The macro now supports move-only and templated types gracefully.
 
-- **More Expressive Mock Method Qualifiers**: Support for additional method qualifiers such as `noexcept` and reference qualifiers in the `MOCK_METHOD` macro enhances compatibility with complex APIs.
+- **Strictness Wrappers (`NiceMock`, `NaggyMock`, `StrictMock`)**: These wrappers now offer better behavior control over uninteresting calls. Using `NiceMock` silences warnings, `NaggyMock` logs them, and `StrictMock` treats such calls as errors. This allows customizing test strictness without noisy output.
 
-- **Simplified Overload Resolution**: Tools to more easily select and mock overloaded methods boost test clarity and reduce boilerplate.
+- **Expectation Modifiers**: Clauses such as `.Times()`, `.InSequence()`, `.After()`, `.RetiresOnSaturation()` give explicit control over call counts and order, enabling partial and total ordering of expected calls to match complex real-world interaction scenarios.
 
-- **Enhanced Strictness Controls**: Improved utilities like `NiceMock`, `StrictMock`, and `NaggyMock` help tailor the strictness level of your mocks, making tests less brittle or more stringent based on your needs.
+- **Action Flexibility**: Actions determine what happens when a mock method is called. New actions and enhancements to existing ones, like `ReturnPointee`, `DoAll`, and `InvokeArgument`, allow combining side effects, changing return values dynamically, and invoking function-pointer arguments.
 
-Example MOCK_METHOD with qualifiers:
+- **Mock Lifecycle Control**: You can now verify mock expectations explicitly using `Mock::VerifyAndClearExpectations()` and safely signal intentional mock leaks using `Mock::AllowLeak()`. This support is vital for robust test suites where object ownership or destruction timing varies.
 
-```cpp
-MOCK_METHOD(void, ProcessData, (int data), (noexcept, override));
-```
+## 3. Portability and Platform Improvements
 
-## Expanded Test Parameterization Options
+To support testing in diverse environments, GoogleMock's portability and platform abstractions have been enhanced:
 
-The test parameterization framework now offers more flexibility and power:
+- **Platform Detection and Compiler Features**: Improved macros detect OS and compiler capabilities precisely, enabling better targeted code paths.
 
-- **Support for Typed and Type-Parameterized Tests Enhancements**: Running the same test logic across multiple types with more intuitive syntax and better error reporting.
+- **Thread Safety and Synchronization Primitives**: Synchronization support has been fortified to safely allow mocks in multi-threaded tests with minimal locking concerns.
 
-- **Combination of Value and Type Parameters**: Increased versatility for creating thorough and maintainable test suites.
+- **Flag Management**: New flag macros and default behaviors allow controlling warning verbosity (`--gmock_verbose=LEVEL`), catch leaked mocks, and default mock behavior, helping you tune the framework for your project's needs.
 
-- **Improved Instantiation Macros**: Clearer macros to instantiate tests with parameters streamline setup.
+- **Support for Embedded and Specialized Environments**: GoogleMock adapts better to embedded and cross-compiled toolchains, helping expand its applicability beyond standard desktop/server environments.
 
-Example of a typed test usage:
+## 4. Examples and Usage Patterns
+
+### Defining and Using a Mock Class
 
 ```cpp
-template <typename T>
-class MyTypedTest : public ::testing::Test {
-  // Test implementation ...
+#include <gmock/gmock.h>
+
+class Foo {
+ public:
+  virtual ~Foo();
+  virtual int GetSize() const = 0;
+  virtual std::string Describe(const char* name) = 0;
+  virtual bool Process(int elem, int count) = 0;
 };
 
-using MyTypes = ::testing::Types<int, double, std::string>;
-TYPED_TEST_SUITE(MyTypedTest, MyTypes);
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(std::string, Describe, (const char* name), (override));
+  MOCK_METHOD(bool, Process, (int elem, int count), (override));
+};
+
+using ::testing::Return;
+using ::testing::_; // wildcard matcher
+
+TEST(FooTest, ExampleUsage) {
+  NiceMock<MockFoo> mock_foo;
+
+  ON_CALL(mock_foo, GetSize())
+      .WillByDefault(Return(10));
+
+  EXPECT_CALL(mock_foo, Process(_, 5))
+      .Times(2)
+      .WillRepeatedly(Return(true));
+
+  EXPECT_TRUE(mock_foo.Process(3, 5));
+  EXPECT_EQ(mock_foo.GetSize(), 10);
+}
 ```
 
+### Controlling Call Order
+
+```cpp
+using ::testing::InSequence;
+
+{
+  InSequence s;
+
+  EXPECT_CALL(mock_foo, Process(1, _));
+  EXPECT_CALL(mock_foo, Process(2, _));
+}
+```
+Calls must occur in the declared order, or the test will fail.
+
+### Custom Actions
+
+You can define how a mock method behaves for calls:
+
+```cpp
+EXPECT_CALL(mock_foo, Process(_, _))
+    .WillOnce([](int elem, int count) {
+      // Custom processing
+      return count > 0;
+    });
+```
+
+### Matching Multiple Arguments as a Tuple
+
+```cpp
+EXPECT_CALL(mock_foo, Process(_, _))
+    .With(::testing::Lt()); // First arg less than second
+```
+
+## 5. Troubleshooting and Best Practices
+
+- Always declare mock methods **publicly**, even if the method being mocked is private or protected in the base class.
+- Use `.RetiresOnSaturation()` to prevent "sticky" expectations that remain active even after call limits are hit.
+- For move-only types (e.g. `std::unique_ptr`), prefer lambdas or callable objects in your `WillOnce` / `WillRepeatedly` clauses.
+- Use sequences and `.After()` clauses for precise control of mock call ordering, to avoid brittle and overly strict tests.
+- Control verbosity with `--gmock_verbose=info|warning|error` to balance helpful feedback with noise reduction.
+- Use `Mock::VerifyAndClearExpectations()` for explicit lifecycle control in complex tests.
+
+## 6. Further Reading and References
+
+- **[Mocking Reference](https://google.github.io/googletest/reference/mocking.html)** — comprehensive macro and API reference.
+- **[gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)** — quick usage summary.
+- **[gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)** — recipes and in-depth patterns.
+- **[Actions Reference](https://google.github.io/googletest/reference/actions.html)** — detailed list of built-in actions and how to create new ones.
+- **[Matchers Reference](https://google.github.io/googletest/reference/matchers.html)** — extensive list of matchers to tailor argument expectations.
+
+Explore these documents to deepen your mastery of GoogleMock's expanded capabilities.
+
 ---
 
-## Summary of Benefits
-
-These major new features empower you to:
-
-- Write more expressive and readable assertions that clearly communicate intent and failure cause.
-- Mock complex APIs and modern C++ constructs effortlessly, shortening test development time.
-- Create broad, robust test suites that cover multiple types and scenarios with less code.
-
----
-
-For full details and comprehensive examples, explore the related sections in the GoogleTest documentation and the GoogleMock Cookbook.
-
-
----
-
-## See Also
-
-- [GoogleTest Primer](primer.md): Start with simple tests and understand the basics.
-- [gMock Cookbook](gmock_cook_book.md): Deep dive into mock techniques.
-- [Matchers Reference](reference/matchers.md): Understand available matchers for assertions.
-- [Actions Reference](reference/actions.md): Explore customizing mock behaviors.
-- [Mocking Reference](reference/mocking.md): Complete guide to mocking APIs and usage.
-
----
-
-<Note>
-These feature highlights focus on user-oriented improvements enabling you to write better tests. Refer to detailed release notes for granular changes and migration information.
-</Note>
+This document equips you with the latest tools and patterns to design robust and expressive tests using GoogleMock. Adopt these improvements to ensure your testing framework evolves smoothly and accurately with your codebase.
